objects/BAPSandboxSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this row is ignored</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DelegatedAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make this user and admin in the Sandbox</description>
        <label>DelegatedAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SandboxName__c</fullName>
        <description>Name of the sandbox the user should be an admin in</description>
        <label>SandboxName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SandboxUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether it should be loaded post-refresh</description>
        <label>SandboxUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Order__c</fullName>
        <description>Order in which this task is executed</description>
        <label>Task Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserAlias__c</fullName>
        <description>Alias of Person, used to auto update emails post refresh</description>
        <label>UserAlias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>removeFromEmail__c</fullName>
        <defaultValue>".invalid"</defaultValue>
        <description>String to remove from the user email post refresh</description>
        <label>removeFromEmail</label>
        <length>244</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resetPw__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should password be reset post-refresh</description>
        <label>resetPw</label>
        <type>Checkbox</type>
    </fields>
    <description>Settings used by the sandbox refresh scripts</description>
    <label>BAPSandboxSetting</label>
    <pluralLabel>BAPSandboxSettings</pluralLabel>
</CustomObject>